Fixed slider container class problem, README.markup spacing problem and bumped version numbers.

--- a/css/plusslider.css
+++ b/css/plusslider.css
@@ -1,5 +1,5 @@
 /**
-	plusslider Version 1.4.2
+	plusslider Version 1.4.3
 	By Jamy Golden
 	http://css-plus.com
 **/
